--- a/app/src/main/res/layout/daily_view_frag.xml
+++ b/app/src/main/res/layout/daily_view_frag.xml
@@ -11,6 +11,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +31,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             app:layout_constraintEnd_toStartOf="@+id/textView14"
             app:layout_constraintStart_toStartOf="@+id/textView14">
 
@@ -40,6 +43,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="8dp"
                 android:text="Antal ml"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -51,6 +55,7 @@
                 android:id="@+id/textView14"
                 android:layout_width="115dp"
                 android:layout_height="39dp"
+                android:textColor="@color/colorPrimaryDark"
                 android:text="Væske"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -62,6 +67,7 @@
                 android:layout_width="66dp"
                 android:layout_height="42dp"
                 android:layout_marginStart="4dp"
+                android:textColor="@color/colorPrimaryDark"
                 android:text="Tid"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -73,6 +79,8 @@
             android:id="@+id/listDaily"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:divider="#4D0C0C0C"
             android:dividerHeight="0.5dp">
 
