--- a/app/src/main/res/layout/list_daily.xml
+++ b/app/src/main/res/layout/list_daily.xml
@@ -14,41 +14,37 @@
 
         <TextView
             android:id="@+id/tid_daily"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:text="Tid"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/ml_daily"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:text="Antal ml"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/type_daily"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingLeft="15dp"
             android:paddingTop="10dp"
             android:text="Væsketype"
             android:textAlignment="textStart"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/edit_daily"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:backgroundTint="@android:color/transparent"
             android:elevation="0dp"
             app:srcCompat="@drawable/edit_btn" />
