--- a/app/src/main/res/layout/weekly_view_frag.xml
+++ b/app/src/main/res/layout/weekly_view_frag.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.measurelet.Weekly_view_frag">
+    tools:context="com.measurelet.Weekly_view_frag"
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -29,7 +30,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp">
+            android:layout_height="45dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp">
 
             <TextView
                 android:id="@+id/textView12"
@@ -39,6 +42,7 @@
                 android:layout_marginEnd="116dp"
                 android:text=" Dato"
                 android:textAlignment="viewStart"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
@@ -52,6 +56,7 @@
                 android:layout_marginEnd="80dp"
                 android:text="Antal ml"
                 android:textAlignment="textStart"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -63,6 +68,8 @@
             android:id="@+id/listWeek"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:divider="#4D0C0C0C"
             android:dividerHeight="0.5dp"/>
 
