--- a/app/src/main/res/layout/registration_standard_prove2.xml
+++ b/app/src/main/res/layout/registration_standard_prove2.xml
@@ -10,11 +10,11 @@
         android:id="@+id/imageButton"
         style="@style/Widget.PrayerTimes.FABlikeButton"
         android:layout_width="164dp"
-        android:layout_height="73dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="8dp"
         android:text="ANDET"
-        android:textSize="20dp"
-        app:cornerRadius="32dp"
+        android:textSize="18sp"
+        app:cornerRadius="18dp"
         app:icon="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
