--- a/app/src/main/res/layout/dashboard_frag.xml
+++ b/app/src/main/res/layout/dashboard_frag.xml
@@ -146,13 +146,13 @@
         android:id="@+id/add_btn"
         style="@style/Widget.PrayerTimes.FABlikeButton"
         android:layout_width="164dp"
-        android:layout_height="73dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="ANDET"
-        android:textSize="20dp"
         app:cornerRadius="32dp"
+        android:textSize="18sp"
         app:icon="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
