--- a/app/src/main/res/layout/fragment_intro_slide_pager.xml
+++ b/app/src/main/res/layout/fragment_intro_slide_pager.xml
@@ -31,13 +31,13 @@
 
     <Button
         android:id="@+id/sign_up_btn"
-        android:layout_width="192dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="8dp"
-        android:text="Tilmeld"
         android:background="@drawable/roundedcorners"
+        android:text="Tilmeld"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
