--- a/app/src/main/res/layout/fragment_terms.xml
+++ b/app/src/main/res/layout/fragment_terms.xml
@@ -56,13 +56,14 @@
 
     <Button
         android:id="@+id/terms_accept_btn"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/roundedcorners"
         android:text="Godkend"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
